# plaxo_otp

./: .commitlintrc.json  .gitignore  .gitmessage  README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml  manual-release.yml  release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  google_drive.rs  main.rs  otp.rs  qr.rs  state.rs  storage.rs  sync.rs  tray.rs  types.rs
src/components/: AddAppModal.tsx  ConfirmModal.tsx  GoogleDriveSync.tsx  ImportModal.tsx  MasterPasswordModal.tsx  OtpItem.tsx  OtpList.tsx  SearchBar.tsx  VirtualizedOtpList.tsx  WindowControls.tsx
src/config/: performance.ts
src/hooks/: useMemoryManager.ts  useOtpTimer.ts
src/utils/: platformIcons.tsx
