[package]
name = "plaxo-otp"
version = "1.3.0"
description = "Plaxo OTP Generator"
authors = ["Plaxo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["clipboard-all", "fs-all", "shell-open", "system-tray", "wry"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
totp-rs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.21"
dirs = "5.0"
rand = "0.8"
auto-launch = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
image = "0.24"
rqrr = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
